# vai-samples

./: .gitignore  CMakeLists.txt  README.md  build.sh
100-UNet-seungwoo/: CMakeLists.txt  main.cpp  main.hpp  utills.hpp  utils.hpp
100-UNet-seungwoo/ONNX/: ONNXWeightLoader.hpp
100-UNet-seungwoo/networks/include/: layers.hpp  unet.hpp
100-UNet-seungwoo/networks/src/: unet.cpp
100-UNet-seungwoo/pretrained/: train.py
100-UNet-seungwoo/python/: evel.py  operation_verification.py  safetnesor.py  utils.py
100-UNet-seungwoo/python/safetensor/: safeTensor.py  safeTensorViewer.py  safetnesor.py
100-UNet-seungwoo/python/train/: dataset.py  trainer.py
100-UNet-seungwoo/shaders/: shaders.hpp
101-EfficientNet-dongyeob/: CMakeLists.txt  main.cpp  test.cpp
101-EfficientNet-dongyeob/networks/: efficientNet.cpp  efficientNet.h
101-EfficientNet-dongyeob/scripts/: download_assets.py  export_weights.py
102-ResNet-JongSeok/: CLAUDE.md  CMakeLists.txt  main.cpp  neuralNet.h  neuralNodes.cpp  neuralNodes.h  npzLoader.cpp  npzLoader.h  vulkanApp.cpp  vulkanApp.h
103-MobileNetV2-SangIn/: CMakeLists.txt  main.cpp  mobilenetv2_spec.h  neuralNet.h  neuralNodes.cpp  neuralNodes.h  tensor.h  test.cpp  timeChecker.hpp
103-MobileNetV2-SangIn/core/: neuralNet.h  neuralNodes.cpp  neuralNodes.h  neuralNodes.h.backup  vulkanApp.cpp
103-MobileNetV2-SangIn/models/: MobileNetV2.cpp  MobileNetV2.h  mobilenetv2.cpp  mobilenetv2.h
103-MobileNetV2-SangIn/utils/: make_json.ipynb  requirements.txt  save_weights.ipynb  test_layers.cpp  test_layers.h  utils.cpp  utils.h  viz_model_arch.ipynb
103-MobileNetV2-SangIn/utils_python/: benchmark_layers.py  benchmark_model.py  check_pytorch_output.py  save_weights.ipynb  viz_model_arch.ipynb
104-PointNet-Jeonghan/: .gitignore  AGENTS.md  CMakeLists.txt  README.md  REFACTOR_PROGRESS.md  REFACTOR_STATUS.md  WEIGHTS_README.md  benchmark_pytorch.py  build.sh  main.cpp  neuralNodes.cpp  point_net.cpp
104-PointNet-Jeonghan/assets/data/: chair.txt  clusters.txt  cube.txt  plane.txt  sample.txt  sphere.txt
104-PointNet-Jeonghan/networks/: AGENTS.md
104-PointNet-Jeonghan/networks/include/: inference.h  pointnet.hpp  weightLoader.hpp  weights.h
104-PointNet-Jeonghan/networks/src/: inference.cpp  pointnet.cpp  weights.cpp
104-PointNet-Jeonghan/test/: AGENTS.md  README.md  generate_reference.py  test_pointnet.cpp
104-PointNet-Jeonghan/test/add_identity/: generate_reference.py  reference.safetensors  test_add_identity.cpp
104-PointNet-Jeonghan/test/batchnorm/: generate_reference.py  reference.safetensors  test_batchnorm.cpp
104-PointNet-Jeonghan/test/encoder/: generate_reference.py  test_encoder.cpp
104-PointNet-Jeonghan/test/fc/: generate_reference.py  reference.safetensors  test_fc.cpp
104-PointNet-Jeonghan/test/fcbn/: generate_reference.py  reference.safetensors  test_fcbn.cpp
104-PointNet-Jeonghan/test/fcbn_seq/: generate_reference.py  reference.safetensors  test_fcbn_seq.cpp
104-PointNet-Jeonghan/test/fcseq/: generate_reference.py  reference.safetensors  test_fcseq.cpp
104-PointNet-Jeonghan/test/gemm_debug/: reference.safetensors
104-PointNet-Jeonghan/test/matmul/: generate_reference.py  reference.safetensors  test_matmul.cpp
104-PointNet-Jeonghan/test/maxpool/: generate_reference.py  reference.safetensors  test_maxpool.cpp
104-PointNet-Jeonghan/test/mlp/: generate_reference.py  reference.safetensors  test_mlp.cpp
104-PointNet-Jeonghan/test/mlp_maxpool/: generate_reference.py  test_mlp_maxpool.cpp
104-PointNet-Jeonghan/test/mlpseq/: generate_reference.py  reference.safetensors  test_mlpseq.cpp
104-PointNet-Jeonghan/test/segment/: generate_reference.py  test_segment.cpp
104-PointNet-Jeonghan/test/tnet/: FC_BN_DESIGN.md  debug_layers.py  generate_reference.py  reference.safetensors  test_tnet.cpp
104-PointNet-Jeonghan/test/tnet_transform_path/: generate_reference.py  test_transform_path.cpp
104-PointNet-Jeonghan/utils/: convert_pytorch_weights.py  convert_to_safetensors.py  download.sh  download_modelnet.py  download_weight.sh  prepare_sample_data.py
110-GPT2-hyungkyu/: BUILD_AND_RUN.md  CMakeLists.txt  README.md  WEIGHTS_README.md  convert_openai_weights.py  download_gpt2_weights.py  main.cpp
110-GPT2-hyungkyu/assets/test_data/: gelu_test.json  layernorm_test.json  linear_test_data.json
110-GPT2-hyungkyu/core/: binaryWeightsReader.h  error.h  globalContext.cpp  globalContext.h  neuralNet.h  shaders.h  tensor.h  tfCheckpointReader.h  vulkanApp.cpp
110-GPT2-hyungkyu/dataloader/: gptDataLoader.cpp  gptDataLoader.h  gptDataset.cpp  gptDataset.h  test.cpp
110-GPT2-hyungkyu/debug/: check_all_tensors.py  check_bias_values.py  check_final_norm.py  check_pos_emb_shape.py  check_pytorch_embeddings.py  check_token.py  check_weights.py  compare_lm_head_wte.py  compare_with_pytorch.py
110-GPT2-hyungkyu/model/: gpt2.cpp  gpt2.h  gpt2Generation.h  gpt2Net.h  gpt2Test.cpp  gpt2Weights.h  inference.cpp  inference.h  lmHeadNode.cpp  lmHeadNode.h
110-GPT2-hyungkyu/model/attention/: attentionNode.cpp  attentionNode.h  attentionNodeTest.cpp
110-GPT2-hyungkyu/model/cache/: kvCache.cpp  kvCache.h  kvCacheTest.cpp
110-GPT2-hyungkyu/test/: README.md  TEST_CATEGORIZATION.md  attentionTests.cpp  graphTest.cpp  graphTest.h  graphTest.inl  jsonParser.cpp  jsonParser.h  layerNormTest.cpp  layerNormTest.h  layerTests.cpp  linearTest.cpp  linearTest.h  profiler.h  runAllTests.cpp  runTests.cpp  testBase.cpp  testBase.h  testFramework.h  testFramework_example.cpp
110-GPT2-hyungkyu/tokenizer/: bpeTokenizer.cpp  test.cpp
110-GPT2-hyungkyu/utils/: README.md  convert_openai_weights.py  download_gpt2_weights.py  final_comparison.py  generate_attention_test_data.py  generate_transformer_test_data.py  setup_weights.py
112-SuffleNet-Chaeeun/: CMakeLists.txt  SuffleNet.h  error.h  jsonParser.cpp  jsonParser.h  main.cpp  neuralNet.h  neuralNodes.cpp  neuralNodes.h  tensor.h  test.cpp
112-SuffleNet-Chaeeun/data/: image_resizer.py
112-SuffleNet-Chaeeun/python/: blocks.py  eval.py  export_safetensors.py  network.py  train.py  utils.py
(+104 files in other folders)
